erDiagram
    CURRENCY_META ||--o{ USER_ACCOUNT : "1:n"
    CURRENCY_META ||--o{ TRANSACTION : "1:n"
    USER_ACCOUNT ||--o{ TRANSACTION : "1:n"

    CURRENCY_META {
        string id PK "UUID主键"
        string display_name "显示名称"
        string symbol "货币符号"
        float default_balance "默认余额"
        boolean allow_negative "允许负余额"
        datetime created_at "创建时间"
    }

    USER_ACCOUNT {
        string id PK "UUID主键"
        string currency_id FK "货币ID (与id组成唯一约束)"
        float balance "账户余额"
        datetime last_updated "最后更新时间"
    }

    TRANSACTION {
        string id PK "交易ID"
        string account_id FK "账户ID (索引)"
        string currency_id FK "货币ID"
        float amount "交易金额"
        string action "交易类型"
        string source "交易来源"
        float balance_before "交易前余额"
        float balance_after "交易后余额"
        datetime timestamp "交易时间 (索引)"
    }